--- a/marks.html
+++ b/marks.html
@@ -94,7 +94,7 @@
     <div class="body-wrapper">
       <div class="body-container">
         <div class="heading">
-          <h1>Головна</h1>
+          <h1>Оцінки</h1>
           <!-- <hr/> -->
         </div>
 
