added subjects.html page + styles

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
           <a href="./marks.html">Оцінки</a>
         </div>
         <div class="curtain-links">
-          <a href="javascript:void(0)">Предмети</a>
+          <a href="./subjects.html">Предмети</a>
         </div>
         <div class="curtain-links">
-          <a href="javascript:void(0)">Групи</a>
+          <a href="./groups.html">Групи</a>
         </div>
         <div class="curtain-links">
-          <a href="javascript:void(0)">Студенти</a>
+          <a href="./students.html">Студенти</a>
         </div>
         <div class="curtain-links">
-          <a href="javascript:void(0)">Накази</a>
+          <a href="./orders.html">Накази</a>
         </div>
         <div class="curtain-links">
             <a id="sidebarAdd">Додати <span id="sidebarAddSpan"> < </span> </a>
@@ -72,16 +72,16 @@
             <a href="./marks.html" style="background-image: url('img/person.svg');"></a>
           </div>
           <div class="sb-squares-wrapper">
-            <a href="javascript:void(0)" style="background-image: url('img/add_person.svg');"></a>
+            <a href="./subjects.html" style="background-image: url('img/add_person.svg');"></a>
           </div>
           <div class="sb-squares-wrapper">
-            <a href="javascript:void(0)" style="background-image: url('img/group.svg');"></a>
+            <a href="./groups.html" style="background-image: url('img/group.svg');"></a>
           </div>
           <div class="sb-squares-wrapper">
-            <a href="javascript:void(0)" style="background-image: url('img/marks.svg');"></a>
+            <a href="./students.html" style="background-image: url('img/marks.svg');"></a>
           </div>
           <div class="sb-squares-wrapper">
-            <a href="javascript:void(0)" style="background-image: url('img/instruction.svg');"></a>
+            <a href="./orders" style="background-image: url('img/instruction.svg');"></a>
           </div>
           <div class="sb-squares-wrapper">
             <a style="background-image: url('img/orders.svg');"></a>
@@ -113,7 +113,7 @@
 
           <div class="body-panels-individ">
                 <a href="javascript:void(0)" style="background-color: #00ce6f;">
-                    <img src="img/circle2.svg">
+                    <img src="img/circle3.svg">
                 </a>
                 <div class="bdpi-inners">
                     <span>134</span>
@@ -124,7 +124,7 @@
 
           <div class="body-panels-individ">
                 <a href="javascript:void(0)" style="background-color: #a95df0;">
-                    <img src="img/circle3.svg">
+                    <img src="img/circle2.svg">
                 </a>
                 <div class="bdpi-inners">
                     <span>16</span>
