--- a/marks.html
+++ b/marks.html
@@ -38,16 +38,16 @@
           <a href="./marks.html">Оцінки</a>
         </div>
         <div class="curtain-links">
-          <a href="javascript:void(0)">Предмети</a>
+          <a href="./subjects.html">Предмети</a>
         </div>
         <div class="curtain-links">
-          <a href="javascript:void(0)">Групи</a>
+          <a href="./groups.html">Групи</a>
         </div>
         <div class="curtain-links">
-          <a href="javascript:void(0)">Студенти</a>
+          <a href="./students.html">Студенти</a>
         </div>
         <div class="curtain-links">
-          <a href="javascript:void(0)">Накази</a>
+          <a href="./orders.html">Накази</a>
         </div>
         <div class="curtain-links">
             <a id="sidebarAdd">Додати <span id="sidebarAddSpan"> < </span> </a>
@@ -71,16 +71,16 @@
             <a href="./marks.html" style="background-image: url('img/person.svg');"></a>
           </div>
           <div class="sb-squares-wrapper">
-            <a href="javascript:void(0)" style="background-image: url('img/add_person.svg');"></a>
+            <a href="./subjects.html" style="background-image: url('img/add_person.svg');"></a>
           </div>
           <div class="sb-squares-wrapper">
-            <a href="javascript:void(0)" style="background-image: url('img/group.svg');"></a>
+            <a href="./groups.html" style="background-image: url('img/group.svg');"></a>
           </div>
           <div class="sb-squares-wrapper">
-            <a href="javascript:void(0)" style="background-image: url('img/marks.svg');"></a>
+            <a href="./students.html" style="background-image: url('img/marks.svg');"></a>
           </div>
           <div class="sb-squares-wrapper">
-            <a href="javascript:void(0)" style="background-image: url('img/instruction.svg');"></a>
+            <a href="./orders" style="background-image: url('img/instruction.svg');"></a>
           </div>
           <div class="sb-squares-wrapper">
             <a style="background-image: url('img/orders.svg');"></a>
@@ -100,7 +100,7 @@
 
         <section class="marks-section">
             <section class="marks-section-filter">
-                <h2>Фільтр:</h2>
+                <h2 class="filter-text">Фільтр:</h2>
                 <select class="marks-select">
                     <option selected disabled><a href="javascript:void(0)">Спеціальність</a></option>
                     <option><a href="javascript:void(0)">0.502340235 - lorem ipsum dolor sit amet</a></option>
@@ -111,7 +111,7 @@
                 </select><br>
                 <p class="throwed">5.05090308 – Монтаж, обслуговування та експлуатація апаратних засобів інформатизації</p>
                 <div class="marks-buttons">
-                    <h2>Групи:</h2>
+                    <h2 class="filter-text">Групи:</h2>
                     <button>OK-11</button>
                     <button>OK-21</button>
                     <button>OK-31</button>
