--- a/marks.html
+++ b/marks.html
@@ -117,7 +117,7 @@
                     <button>OK-31</button>
                     <button>OK-41</button>
                     <hr><br>
-                    <h2>Семестр:</h2>
+                    <h2 class="filter-text">Семестр:</h2>
                     <button>1 семестр</button>
                     <button>2 семестр</button>
                 </div>
