--- a/subjects.html
+++ b/subjects.html
@@ -116,10 +116,10 @@
                     <div class="checkbox-bordered"><input type="checkbox">OK-31</div>
                     <div class="checkbox-bordered"><input type="checkbox">OK-32</div>
                     <!--  --><br><br>
-                    <button>Показати</button>
+                    <button class="submit-btn"><span>Показати</span></button>
                     <button>Скинути фільтр</button>
                 </div>
-
+                <!-- <button class="submit-btn"><span>Some</span></button> -->
                 <section class="table-subjects-section">
 
                     <table class="table-subjects">
