--- a/marks.html
+++ b/marks.html
@@ -80,7 +80,7 @@
             <a href="./students.html" style="background-image: url('img/marks.svg');"></a>
           </div>
           <div class="sb-squares-wrapper">
-            <a href="./orders" style="background-image: url('img/instruction.svg');"></a>
+            <a href="./orders.html" style="background-image: url('img/instruction.svg');"></a>
           </div>
           <div class="sb-squares-wrapper">
             <a style="background-image: url('img/orders.svg');"></a>
