--- a/orders.html
+++ b/orders.html
@@ -15,7 +15,7 @@
   </head>
   <body>
 
-    <div class="navbar">
+    <div class="navbar" >
         <div class="navbar-roll">
 
             <div class="logo-text">
@@ -28,28 +28,27 @@
         </div>
     </div>
 
-
     <div class="sidebar">
 
       <div id="curtain" class="curtain rotated">
-        <div class="curtain-links">
-          <a href="./index.html">Головна</a>
-        </div>
-        <div class="curtain-links">
-          <a href="./marks.html">Оцінки</a>
-        </div>
-        <div class="curtain-links">
-          <a href="./subjects.html">Предмети</a>
-        </div>
-        <div class="curtain-links">
-          <a href="./groups.html">Групи</a>
-        </div>
-        <div class="curtain-links">
-          <a href="./students.html">Студенти</a>
-        </div>
-        <div class="curtain-links">
-          <a href="./orders.html">Накази</a>
-        </div>
+          <div class="curtain-links">
+            <a href="./index.html">Головна</a>
+          </div>
+          <div class="curtain-links">
+            <a href="./marks.html">Оцінки</a>
+          </div>
+          <div class="curtain-links">
+            <a href="./subjects.html">Предмети</a>
+          </div>
+          <div class="curtain-links">
+            <a href="./groups.html">Групи</a>
+          </div>
+          <div class="curtain-links">
+            <a href="./students.html">Студенти</a>
+          </div>
+          <div class="curtain-links">
+            <a href="./orders.html">Накази</a>
+          </div>
         <div class="curtain-links">
             <a id="sidebarAdd">Додати <span id="sidebarAddSpan"> < </span> </a>
             <ul id="sidebarUl" class="sidebar-ul hidden">
@@ -95,67 +94,25 @@
     <div class="body-wrapper">
       <div class="body-container">
         <div class="heading">
-          <h1>Головна</h1>
+          <h1>Список наказів</h1>
           <!-- <hr/> -->
         </div>
 
-        <div class="body-panels">
-
-          <div class="body-panels-individ">
-                <a href="javascript:void(0)" style="background-color: #fa335c;">
-                    <img src="img/circle1.svg">
-                </a>
-                <div class="bdpi-inners">
-                    <span>560</span>
-                    <p>студентів</p>
+        <section class="subjects-section">
+            <section class="subjects-section-filter">
+                <div class="word-order">
+                    <span>19.09.2016<br>№19582</span>
                 </div>
-          </div>
-
-          <div class="body-panels-individ">
-                <a href="javascript:void(0)" style="background-color: #00ce6f;">
-                    <img src="img/circle3.svg">
-                </a>
-                <div class="bdpi-inners">
-                    <span>134</span>
-                    <p>предметів</p>
+                <div class="word-order">
+                    <span>19.09.2016<br>№19582</span>
                 </div>
-          </div>
-
-
-          <div class="body-panels-individ">
-                <a href="javascript:void(0)" style="background-color: #a95df0;">
-                    <img src="img/circle2.svg">
-                </a>
-                <div class="bdpi-inners">
-                    <span>16</span>
-                    <p>групи</p>
+                <div class="word-order">
+                    <span>19.09.2016<br>№19582</span>
                 </div>
-          </div>
 
-          <div class="body-panels-individ">
-                <a href="javascript:void(0)" style="background-color: #d77533;">
-                    <img src="img/circle4.svg">
-                </a>
-                <div class="bdpi-inners">
-                    <span>2</span>
-                    <p>накази</p>
-                </div>
-          </div>
-        </div>
-        <!-- <hr/> -->
-        <div class="notification">
-            <img src="img/orders.svg"/>
-              <h2>Нагадування</h2>
-              <hr/>
-              <span class="warn">&rdca; Якесь нагадування тут...</span>
-              <strong>21.09.2016</strong>
-        </div>
-        <!-- <div class="notification">
-            <img src="img/orders.svg"/>
-              <h2>Notifications</h2>
-              <hr/>
-                <span class="warn">Some notification here</span>
-        </div> -->
+
+            </section>
+        </section>
 
       </div>
     </div>
@@ -164,3 +121,4 @@
 
   </body>
 </html>
+orders
