--- a/students.html
+++ b/students.html
@@ -94,13 +94,13 @@
     <div class="body-wrapper">
       <div class="body-container">
         <div class="heading">
-          <h1>Предмети</h1>
+          <h1>Студенти</h1>
           <!-- <hr/> -->
         </div>
 
         <section class="subjects-section">
             <section class="subjects-section-filter">
-                <h2 class="filter-text">Спеціальність:</h2>
+                <h2 class="filter-text">Фільтр по студентам:</h2>
                 <select class="marks-select">
                     <option selected disabled><a href="javascript:void(0)">Спеціальність</a></option>
                     <option>0.502340235 - lorem ipsum dolor sit amet</option>
@@ -126,24 +126,26 @@
                         <tr>
                             <th>Дії</th>
                             <th>Назва предмету</th>
-                            <th>К-сть предметів</th>
-                            <th>Викладач</th>
-                            <th>Екзамени</th>
-                            <th>Дпа</th>
+                            <th>Дата народження</th>
+                            <th>Спеціальність</th>
+                            <th>Групі</th>
+                            <th>Адреса</th>
+                            <th>Телефон</th>
                         </tr>
                         <tr>
                             <td>
                                 <select class="table-select">
                                     <option selected disabled></option>
-                                    <option>Інформація по предмету</option>
+                                    <option>Інформація по студенту</option>
                                     <option><button>Видалити</button></option>
                                 </select>
                             </td>
-                            <td>Українська мова</td>
-                            <td>4</td>
                             <td>Хренова Гадя Петрович</td>
-                            <td>-</td>
-                            <td>1</td>
+                            <td>02.05.1998</td>
+                            <td>5.0501205</td>
+                            <td>OK-21</td>
+                            <td>м.Львів, вул. Кульпарківська</td>
+                            <td>0987685940</td>
                         </tr>
                     </table>
 
