--- a/students.html
+++ b/students.html
@@ -128,7 +128,7 @@
                             <th>Назва предмету</th>
                             <th>Дата народження</th>
                             <th>Спеціальність</th>
-                            <th>Групі</th>
+                            <th>Група</th>
                             <th>Адреса</th>
                             <th>Телефон</th>
                         </tr>
