--- a/students.html
+++ b/students.html
@@ -125,10 +125,10 @@
                     <table class="table-subjects">
                         <tr>
                             <th>Дії</th>
-                            <th>Назва предмету</th>
+                            <th>Прізвище, ім'я, по батькові</th>
                             <th>Дата народження</th>
                             <th>Спеціальність</th>
-                            <th>Групі</th>
+                            <th>Група</th>
                             <th>Адреса</th>
                             <th>Телефон</th>
                         </tr>
